# farsight-technical

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  problem_statement.md
queries/: table_details.sql
server/: .dockerignore  Dockerfile  README.md  app.py  cdk.json  deployment.md  docker-compose.yml  generate_docs.py  pyproject.toml  requirements.txt  scratchpad.ipynb  server.py  utils.py
server/docs/: index.html  search.js  src.html
server/docs/src/: __pycache__.html  agents.html  api.html  config.html  configs.html  contracts.html  core.html  db.html  docs.html  llm.html  models.html  prompts.html  runtime.html  temporal.html  tools.html
server/docs/src/agents/: acquisition.html  funding_rounds.html  investor_analysis.html  orchestration.html  organizations.html  registry.html  sector_trends.html  web_search.html
server/docs/src/api/: api.html  middleware.html  routers.html
server/docs/src/contracts/: agent_io.html  tool_io.html
server/docs/src/core/: agent_base.html  agent_context.html  agent_response.html
server/docs/src/db/: pinecone_client.html  postgres_client.html  redis_client.html
server/docs/src/llm/: openai_client.html
server/docs/src/models/: acquisitions.html  funding_rounds.html  organizations.html  pinecone_organizations.html
server/docs/src/prompts/: prompt_manager.html
server/infrastructure/: README.md  __init__.py  stack.py
server/src/: __init__.py  config.py
server/src/agents/: __init__.py  agent_base.py  registry.py
server/src/api/: __init__.py  api.py
server/src/contracts/: agent_io.py  tool_io.py
server/src/core/: __init__.py  agent_base.py  agent_context.py  agent_response.py
server/src/db/: __init__.py  pinecone_client.py  postgres_client.py  redis_client.py
server/src/llm/: __init__.py  openai_client.py
server/src/models/: __init__.py  acquisitions.py  funding_rounds.py  organizations.py  pinecone_organizations.py
server/src/prompts/: __init__.py  prompt_manager.py
server/src/runtime/: __init__.py  async_manager.py  executor.py  tracing.py
server/src/temporal/: __init__.py  batch_operations.py  client.py  initialize_schedules.py  queries.py  schedules.py  signals.py  worker.py
server/src/tools/: __init__.py  aggregate_funding_trends.py  analyze_sector_concentration.py  calculate_funding_velocity.py  calculate_portfolio_metrics.py  compare_to_market_benchmarks.py  find_investor_portfolio.py  generate_llm_function_response.py  generate_llm_response.py  get_acquisitions.py  get_funding_rounds.py  get_organizations.py  identify_funding_patterns.py  identify_investment_patterns.py  query_enrichment.py  semantic_search_organizations.py  web_search.py
server/tests/: conftest.py
server/tests/unit/: config_test.py
(+179 files in other folders)
