[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "black>=25.12.0",
    "fastapi[standard]>=0.125.0",
    "isort>=7.0.0",
    "langfuse>=3.11.0",
    "mypy>=1.19.1",
    "pinecone[asyncio,grpc]>=8.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "temporalio>=1.21.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
# Configure pytest to find tests and resolve imports
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
# Show all files including those with 0% coverage
skip_covered = false
skip_empty = false
